fix(playground): Prevent Playground examples being cut off #12

--- a/src/components/RedLiner/RedLiner.module.scss
+++ b/src/components/RedLiner/RedLiner.module.scss
@@ -24,3 +24,8 @@
     text-transform: uppercase;
   }
 }
+
+// Add space around examples in docz's Playground
+div[data-testid="live-preview"] {
+  padding: 44px 0 44px 30px;
+}
